// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoTooltip Component Initial rendering should match snapshot with custom props 1`] = `
<DocumentFragment>
  <div
    class="relative inline-block mt-4 sm:mt-5 custom-class"
    data-testid="custom-test-id"
  >
    <button
      class="flex items-center text-gray-500 hover:text-gray-700 text-sm focus:outline-none"
      data-testid="btn-info-tooltip-trigger-button"
    >
      <img
        alt="Information icon"
        aria-hidden="true"
        class="w-4 h-4 mr-1"
        data-testid="text-info-icon"
        src="mocked-info-icon-path"
      />
      <span
        data-testid="text-info-button-label"
      >
        Custom Info
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InfoTooltip Component Initial rendering should match snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="relative inline-block mt-4 sm:mt-5 "
    data-testid=""
  >
    <button
      class="flex items-center text-gray-500 hover:text-gray-700 text-sm focus:outline-none"
      data-testid="btn-info-tooltip-trigger-button"
    >
      <img
        alt="Information icon"
        aria-hidden="true"
        class="w-4 h-4 mr-1"
        data-testid="text-info-icon"
        src="mocked-info-icon-path"
      />
      <span
        data-testid="text-info-button-label"
      >
        Info
      </span>
    </button>
  </div>
</DocumentFragment>
`;
